--- a/.prettierrc
+++ b/.prettierrc
@@ -1,13 +1,21 @@
-# .prettierrc
-tabWidth: 2
-endOfLine: lf
-useTabs: false
-printWidth: 120
-singleQuote: true
-overrides:
-  - files: '*.less'
-    options:
-      singleQuote: false
-  - files: '*.css'
-    options:
-      singleQuote: false
+{
+  "tabWidth": 2,
+  "endOfLine": "lf",
+  "useTabs": false,
+  "printWidth": 120,
+  "singleQuote": true,
+  "overrides": [
+    {
+      "files": "*.less",
+      "options": {
+        "singleQuote": false
+      }
+    },
+    {
+      "files": "*.css",
+      "options": {
+        "singleQuote": false
+      }
+    }
+  ]
+}
