--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "vue2-edit-table",
+  "name": "test-tailwindcss",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,47 +8,28 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@vue/cli-plugin-babel": "4.1.1",
-    "@vue/composition-api": "1.0.0-rc.12",
-    "ant-design-vue": "1.7.5",
+    "@vue/composition-api": "^1.0.0-rc.12",
+    "ant-design-vue": "^1.7.5",
+    "core-js": "^3.6.5",
     "vue": "^2.6.11",
-    "vxe-table": "3.3.8",
-    "xe-utils": "3.3.0"
+    "vxe-table": "^3.3.8",
+    "xe-utils": "^3.3.0"
   },
   "devDependencies": {
-    "@vue/cli-plugin-eslint": "4.1.1",
-    "@vue/cli-service": "4.1.1",
-    "babel-eslint": "^10.0.3",
+    "@mertasan/tailwindcss-variables": "^1.2.1",
+    "@tailwindcss/postcss7-compat": "^2.1.2",
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "@vue/eslint-config-prettier": "^6.0.0",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.0.1",
+    "eslint-plugin-prettier": "^3.3.1",
+    "eslint-plugin-vue": "^6.2.2",
+    "postcss": "^7.0.35",
+    "postcss-import": "^12.0.1",
+    "postcss-nested": "^4.2.3",
+    "prettier": "^2.2.1",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.2",
     "vue-template-compiler": "^2.6.11"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "rules": {
-      "no-debugger": "off"
-    },
-    "parserOptions": {
-      "parser": "babel-eslint"
-    }
-  },
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
-    }
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ],
-  "keywords": [],
-  "description": ""
+  }
 }
